k8s/front-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: front
  namespace: gauzian-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: front
  template:
    metadata:
      labels:
        app: front
    spec:
      containers:
      - name: front
        image: node:20-alpine
        imagePullPolicy: IfNotPresent
        workingDir: /app
        command: ["sh", "-c", "npm install && npm run dev -- --host 0.0.0.0"]
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: 2000m
            memory: 2Gi
        volumeMounts:
        - name: source
          mountPath: /app
        - name: node-modules
          mountPath: /app/node_modules

      volumes:
      - name: source
        hostPath:
          path: /home/dev/gauzian/gauzianFront   # ex: /home/gael/gauzianFront
          type: Directory
      - name: node-modules
        hostPath:
          path: /opt/gauzian-dev/front-node_modules
          type: DirectoryOrCreate
