k8s/front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: front
  namespace: gauzian-dev
  labels:
    app: front
spec:
  selector:
    app: front
  ports:
  - name: http
    port: 3000
    targetPort: 3000
  type: ClusterIP
